# lokalize

./: CMakeLists.txt
src/: alttransview.cpp  editortab.cpp  editortab_findreplace.cpp  editorview.cpp  lokalize.desktop  msgctxtview.cpp  noteeditor.cpp  xlifftextedit.cpp
src/catalog/: catalog.cpp  catalogstorage.h  catalogstring.cpp  catalogstring.h  cmd.cpp  phase.cpp  phase.h
src/catalog/gettext/: catalogitem.cpp  gettextimport.cpp
src/catalog/ts/: tsstorage.cpp  tsstorage.h
src/catalog/xliff/: xliffstorage.cpp  xliffstorage.h
src/cataloglistview/: catalogmodel.cpp
src/common/: fastsizehintitemdelegate.cpp  flowlayout.cpp  languagelistmodel.cpp  stemming.cpp
src/filesearch/: filesearchtab.cpp
src/glossary/: glossary.cpp  glossarywindow.cpp
src/mergemode/: mergecatalog.cpp  mergecatalog.h  mergeview.cpp
src/prefs/: prefs.cpp  prefs.h
src/project/: projectmodel.cpp  projecttab.cpp
src/tm/: jobs.cpp  qamodel.h  tmentry.h  tmmanager.h  tmview.cpp
src/webquery/: webquerycontroller.cpp
